# Pablo

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.factory  LOVABLE_PROMPT.md  README.md  deploy.sh  docker-compose.yml  factory_main.py  logrotate.conf  main.py  nginx.conf  orchestrator.py  pyproject.toml  railway.toml  render.yaml  requirements.txt
agent-dashboard/: index.html  package-lock.json  package.json  vite.config.ts
agents/: analytics.py  base.py  customer_support.py  inventory.py  order_manager.py
basicfood-fixes/: CHANGES.md
database/: models.py
docs/: AUDIT_BOTMOTHER_2026.md  ai_architecture.md  implementation_plan.md  project_audit.md
factory/: .env.example  Dockerfile  api.py  ceo_delegation.json  ceo_experiments.json  cycle.py  db.py  factory_main.py  logging_config.py  mypy.ini  notifications.py  notifier.py  requirements.txt
n8n-audit/: 01_BotMother_Monitor.json  02_BotMother_HealthCheck.json  03_BotMother_SetWebhook.json  04_BotMother_SendTest.json
nevesty-models/: .dockerignore  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  bot.js  constants.js  database.js  deploy.sh  docker-compose.yml  ecosystem.config.js  eslint.config.js  nginx.conf  package-lock.json  package.json  railway.json  render.yaml  server.js  strings-audit-report.txt  strings.js
platform/: .env.example  .gitignore  Makefile  package.json  turbo.json
scripts/: backup.sh  restore.sh
src/: App.tsx
supabase/: pablo_messages.sql
tests/: test_account_status_logic.py  test_ai_memory.py  test_ai_providers.py  (+14 more)
(+1132 files in other folders)
