[project]
name = "botmother-workspace"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiogram==3.13.1",
    "asyncpg==0.29.0",
    "aiohttp==3.10.10",
    "python-dotenv==1.0.1",
    "openai>=1.40.0",
    "telethon>=1.36.0",
    "PySocks>=1.7.1",
    "qrcode[pil]>=7.4",
    "aiohttp-socks>=0.7.3",
    "pypdf>=4.3.1",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
